Refactor code to Java 17 (16)