@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2018  Luc Hermans
+ * Copyright (C) 2025  Luc Hermans
  * 
  * This program is free software: you can redistribute it and/or modify it under the terms of the
  * GNU General Public License as published by the Free Software Foundation, either version 3 of the
@@ -17,15 +17,13 @@
 package org.lh.dmlj.schema.editor.wizard.export;
 
 import java.io.BufferedReader;
-import java.io.File;
 import java.io.FileWriter;
 import java.io.PrintWriter;
 import java.io.StringReader;
 import java.net.URI;
-import java.util.Arrays;
+import java.util.List;
 
 import org.eclipse.jface.dialogs.MessageDialog;
-import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.wizard.Wizard;
 import org.eclipse.swt.widgets.Display;
@@ -33,14 +31,12 @@ import org.eclipse.ui.IExportWizard;
 import org.eclipse.ui.IWorkbench;
 import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.ide.IDE;
-import org.lh.dmlj.schema.Schema;
 import org.lh.dmlj.schema.editor.Plugin;
 import org.lh.dmlj.schema.editor.log.Logger;
 import org.lh.dmlj.schema.editor.preference.PreferenceConstants;
 import org.lh.dmlj.schema.editor.template.SchemaTemplate;
 
 public class ExportWizard extends Wizard implements IExportWizard {
-
 	private static final Logger logger = Logger.getLogger(Plugin.getDefault());
 	
 	private ExportOptionsPage exportOptionsPage;
@@ -49,15 +45,14 @@ public class ExportWizard extends Wizard implements IExportWizard {
 	private IStructuredSelection selection;
 	
 	private static String rtrim(String line) {
-		StringBuilder p = new StringBuilder(line);
-		while (p.length() > 0 && p.charAt(p.length() - 1) == ' ') {
+		var p = new StringBuilder(line);
+		while (!p.isEmpty() && p.charAt(p.length() - 1) == ' ') {
 			p.setLength(p.length() - 1);
 		}
 		return p.toString();
 	}
 
 	public ExportWizard() {
-		super();
 		setWindowTitle("Export");
 	}
 	
@@ -78,20 +73,17 @@ public class ExportWizard extends Wizard implements IExportWizard {
 
 	@Override
 	public boolean performFinish() {
-		
-		Schema schema = schemaSelectionPage.getSchema();
-		File file = outputFileSelectionPage.getFile();		
-		boolean sortSchemaEntities = exportOptionsPage.isSortSchemaEntities();
+		var schema = schemaSelectionPage.getSchema();
+		var file = outputFileSelectionPage.getFile();		
+		var sortSchemaEntities = exportOptionsPage.isSortSchemaEntities();
 		storeSortSchemaEntitiesInPreferenceStore(sortSchemaEntities);
 		
 		if (file.exists()) {
-			String title = "Overwrite file ?";
-			String message = "File '" + file.getAbsolutePath() + 
+			var title = "Overwrite file ?";
+			var message = "File '" + file.getAbsolutePath() + 
 							 "' exists.  Do you want to overwrite it ?";
 			String[] buttons = { "Yes", "No" };
-			MessageDialog dialog = 
-				new MessageDialog(getShell(), title, null, message, 
-								  MessageDialog.QUESTION, buttons, 1);
+			var dialog = new MessageDialog(getShell(), title, null, message, MessageDialog.QUESTION, buttons, 1);
 			if (dialog.open() == 1) {
 				return false;
 			}			
@@ -99,67 +91,47 @@ public class ExportWizard extends Wizard implements IExportWizard {
 		
 		// generate the schema syntax (no busy cursor needed since this is lightning fast)
 		try {
-			SchemaTemplate template = new SchemaTemplate();
-			String syntax = 
-				template.generate(Arrays.asList(new Object[] {schema, Boolean.TRUE, 
-															  Boolean.valueOf(sortSchemaEntities)})); 
+			var template = new SchemaTemplate();
+			var syntax = template.generate(List.of(schema, Boolean.TRUE, Boolean.valueOf(sortSchemaEntities)));
 			// remove trailing spaces...
-			PrintWriter out = new PrintWriter(new FileWriter(file));
-			
-			BufferedReader in = new BufferedReader(new StringReader(syntax));
-			
-			for (String line = in.readLine(); line != null; line = in.readLine()) {
-				out.println(rtrim(line));
+			try (var out = new PrintWriter(new FileWriter(file)); var in = new BufferedReader(new StringReader(syntax))) {
+				for (var line = in.readLine(); line != null; line = in.readLine()) {
+					out.println(rtrim(line));
+				}
+				out.flush();
 			}
-			
-			out.flush();
-			out.close();
-			
-			in.close();
-			
-		} catch (Throwable t) {
-			logger.error(t.getMessage(), t);
-			String title = "Error";
-			String p = t.getMessage() != null ? " (" + t.getMessage() + ")": "";
-			String message = "An error occurred: " + 
-							 t.getClass().getSimpleName() + p + ". See log.";
-			String[] buttons = { "OK" };
-			MessageDialog dialog = 
-				new MessageDialog(getShell(), title, null, message, MessageDialog.QUESTION, buttons, 
-								  1);
-			dialog.open();
+		} catch (Exception e) {
+			logger.error(e.getMessage(), e);
+			var title = "Error";
+			var p = e.getMessage() != null ? " (" + e.getMessage() + ")": "";
+			var message = "An error occurred: " + e.getClass().getSimpleName() + p + ". See log.";
+			MessageDialog.openError(getShell(), title, message);
 			return false;
 		}
 		
 		// open the generated syntax file in a text editor:
         try {           
-        	// replace backward slashes into forward ones...
-        	StringBuilder p = new StringBuilder(file.getAbsolutePath());
-        	for (int i = 0; i < p.length(); i++) {
-        		if (p.charAt(i) == '\\') {
-        			p.setCharAt(i, '/');
-        		}
-        	}
-            URI uri = new URI("file", p.toString(), null); // make sure the file name is encoded
-        	IDE.openEditor(PlatformUI.getWorkbench().getActiveWorkbenchWindow().getActivePage(), 
-            			   uri, "org.eclipse.ui.DefaultTextEditor", true);
-	    } catch (Throwable t) {
-            // something went wrong while opening the file in a text editor, provide the user 
-    		// with some feedback...
-            MessageDialog.openError(Display.getCurrent().getActiveShell(), "Error", 
-            						"Cannot open syntax file '" + file.getAbsolutePath() + "'.");
+	        	// replace backward slashes into forward ones...
+	        	var p = new StringBuilder(file.getAbsolutePath());
+	        	for (var i = 0; i < p.length(); i++) {
+	        		if (p.charAt(i) == '\\') {
+	        			p.setCharAt(i, '/');
+	        		}
+	        	}
+	        var uri = new URI("file", p.toString(), null); // make sure the file name is encoded
+	        	IDE.openEditor(PlatformUI.getWorkbench().getActiveWorkbenchWindow().getActivePage(), uri, "org.eclipse.ui.DefaultTextEditor", true);
+	    } catch (Exception e) {
+            // something went wrong while opening the file in a text editor, provide the user with some feedback...
+            MessageDialog.openError(Display.getCurrent().getActiveShell(), "Error", "Cannot open syntax file '" + file.getAbsolutePath() + "'.");
             // and log the stack trace...
-            logger.error(t.getMessage(), t);
+            logger.error(e.getMessage(), e);
 	    }
-        
         return true;
-        
 	}
 
 	private void storeSortSchemaEntitiesInPreferenceStore(boolean newValue) {
-		IPreferenceStore store = Plugin.getDefault().getPreferenceStore();
-		boolean oldValue = 
-			store.getBoolean(PreferenceConstants.SORT_SCHEMA_ENTITIES_ON_EXPORT_TO_SYNTAX);
+		var store = Plugin.getDefault().getPreferenceStore();
+		var oldValue = store.getBoolean(PreferenceConstants.SORT_SCHEMA_ENTITIES_ON_EXPORT_TO_SYNTAX);
 		if (newValue != oldValue) {
 			store.setValue(PreferenceConstants.SORT_SCHEMA_ENTITIES_ON_EXPORT_TO_SYNTAX, newValue);
 		}
